fixed code analysis issues